Fix responsive navbar so at 768px menu doesn't collapse early before hamburger menu appears

--- a/profiles/openenterprise/themes/bella/less/header.less
+++ b/profiles/openenterprise/themes/bella/less/header.less
@@ -185,12 +185,12 @@ header {
 	}
 }
 
-// Navar
+// Navbar
 .navbar-default, .navbar-inverse {
 	.navbar-nav {
 		float: right;
 		text-align: center;
-		@media @mobile {
+		@media (max-width: @screen-xs-max) {
 			display: block;
 			float: none;
 			margin: 0;
@@ -214,7 +214,7 @@ header {
 				}
 			}
 			// Mobile navbar-nav > li
-			@media @mobile {
+			@media (max-width: @screen-xs-max) {
 				.box-sizing();
 				border: 0;
 				border-top: 1px solid @gray-light;
@@ -222,6 +222,7 @@ header {
 				float: left;
 				overflow: auto;
 				width: 50% !important;
+                border: 1px solid red;
 			}
 			&.expanded {
 				@media @tablet {
